--- a/posmobile/pubspec.yaml
+++ b/posmobile/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  fluttertoast: ^8.2.12
   http: ^1.4.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
