--- a/posmobile/pubspec.yaml
+++ b/posmobile/pubspec.yaml
@@ -41,15 +41,29 @@ dependencies:
   flutter_thermal_printer: ^1.2.1+1
   permission_handler: ^12.0.0+1
   flutter_bluetooth_printer: ^2.19.0
+  
 
 
 
 dev_dependencies:
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.4
   flutter_test:
     sdk: flutter
 
-
+flutter_launcher_icons:
+  android: "launcher_icon"  # Nama file icon untuk Android
+  ios: true
+  image_path: "assets/images/LogoPOS.png"  # Path ke file icon Anda
+  min_sdk_android: 21  # Versi minimum Android SDK
+  adaptive_icon_background: "#dae9e2"  # Warna background untuk Adaptive Icon
+  # adaptive_icon_foreground: "assets/icon/icon_foreground.png"  # Icon foreground untuk Adaptive Icon
+  web:
+    generate: false
+  windows:
+    generate: false 
+  macos:
+    generate: false
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
@@ -63,6 +77,8 @@ flutter:
   assets:
     - assets/images/lakesidefnb.png
     - assets/images/logo.png
+    - assets/images/LogoPOS.png
+    - assets/images/HarusnyaFix.png
     - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
