--- a/posmobile/android/app/src/main/AndroidManifest.xml
+++ b/posmobile/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
   <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:label="POS.in"
+        android:label="posmobile"
         android:name="${applicationName}"
-        android:icon="@mipmap/launcher_icon">
+        android:icon="@mipmap/ic_launcher">
       
 
         <activity
