--- a/posmobile/pubspec.yaml
+++ b/posmobile/pubspec.yaml
@@ -40,8 +40,7 @@ dependencies:
   http: ^1.4.0
   intl: ^0.20.2
   permission_handler: ^12.0.0+1
-  shared_preferences: ^2.5.3
-  
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
@@ -60,6 +59,12 @@ flutter:
   assets:
     - assets/images/lakesidefnb.png
     - assets/images/logo.png
+    - assets/images/LogoFix.png
+    - assets/images/LogoBawah.png
+    - assets/images/FixBawah.png
+    - assets/images/gataulagi.png
+    - assets/images/FixGaSih.png
+    - assets/images/pusing.png
     - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
