--- a/posmobile/pubspec.yaml
+++ b/posmobile/pubspec.yaml
@@ -44,9 +44,23 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.4
+  flutter_native_splash: ^2.3.0
   flutter_test:
     sdk: flutter
 
+flutter_launcher_icons:
+  android: "launcher_icon"  # Nama file icon untuk Android
+  ios: true
+  image_path: "assets/images/LogoAPKFix.png"  # Path ke file icon Anda
+  min_sdk_android: 21  # Versi minimum Android SDK
+  adaptive_icon_background: "#c8f5e8"  # Warna background untuk Adaptive Icon
+  # adaptive_icon_foreground: "assets/icon/LogoAPK.png"  # Icon foreground untuk Adaptive Icon
+
+flutter_native_splash:
+  color: "#C8F5E8"  # Warna hijau primary
+  image: assets/images/LogoAPKFix.png
+  
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
@@ -64,7 +78,10 @@ flutter:
     - assets/images/FixBawah.png
     - assets/images/gataulagi.png
     - assets/images/FixGaSih.png
+    - assets/images/FixGaSihV2.png
     - assets/images/pusing.png
+    - assets/images/LogoAPK.png
+    - assets/images/LogoAPKFix.png
     - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
