--- a/posmobile/android/app/src/main/AndroidManifest.xml
+++ b/posmobile/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
   <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:label="POS.in"
+        android:label="Kasir.in"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
       
